Fix: Add new authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,5 @@
 Armen Zambrano <armenzg@users.noreply.github.com>
+Eli Perelman <eli@eliperelman.com>
 Hassan Ali <helfi92@gmail.com>
+Syeda Aimen Batool <aimenbatool72@gmail.com>
+hybrid1999 <31095519+HrushikeshBodas@users.noreply.github.com>
